syntax = "proto3";

package dalalstreet.socketapi.actions;

import "errors/Errors.proto";

message RetrieveMortgageStocksRequest {
    uint32 stock_id = 1;
    uint32 stock_quantity = 2;
}

message RetrieveMortgageStocksResponse {
    message RetrieveMortgageStocksSuccessResponse {
        bool success = 1;
        uint32 trading_price = 2;   //price of stocks when the server processed the request
    }

    message NotEnoughStocksError {
        string reason = 1;
    }

    message NotEnoughCashError {
        string reason = 1;
    }

    oneof response {
        RetrieveMortgageStocksSuccessResponse result = 1;
        NotEnoughStocksError not_enough_stocks_error = 2;
        NotEnoughCashError not_enough_cash_error = 3;
        errors.BadRequestError bad_request_error = 4;
        errors.InternalServerError internal_server_error = 5;
    }
}
